--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,13 @@
 			<version>5.6.7.Final</version>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/com.lowagie/itext -->
+		<dependency>
+		    <groupId>com.lowagie</groupId>
+		    <artifactId>itext</artifactId>
+		    <version>2.1.7</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
