--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,18 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 			<version>3.0.6</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/com.itextpdf/itextpdf -->
+<dependency>
+    <groupId>com.itextpdf</groupId>
+    <artifactId>itextpdf</artifactId>
+    <version>5.5.13.3</version>
+</dependency>
+<dependency>
+    <groupId>com.twilio.sdk</groupId>
+    <artifactId>twilio</artifactId>
+    <version>8.1.0</version>
+</dependency>
 	</dependencies>
 	<build>
 		<plugins>
